# pyowa-dataframes

./: .gitignore  Makefile  README.md  dask_processing.py  generate_data.py  main.py  pandas_processing.py  polars_processing.py  profiling.py  pyproject.toml  pyspark_processing.py
processors/: daft_processing.py  dask_processing.py  pandas_processing.py  polars_processing.py  pyspark_processing.py  write_output.py
slides/: presentation_slides.ipynb
slides/.ipynb_checkpoints/: presentation_slides-checkpoint.ipynb
slides/resources/: benchmarks.html  benchmarks.json
