[project]
name = "pyowa-dataframes"
version = "0.1.0"
description = "Demo of various dataframe libraries"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas==2.2.3",
    "polars==1.22.0",
    "dask==2025.2.0",
    "faker==36.1.1",
    "memory-profiler==0.61.0",
    "pyarrow==19.0.0",
    "pyspark==3.5.4",
]
